Updated frontend and auth-service components